Finished the Forward Selection

--- a/Group_Project_Report.ipynb
+++ b/Group_Project_Report.ipynb
@@ -22,43 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.2     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.0.3     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.2\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.0\n",
-      "\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 0.1.1 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mbroom    \u001b[39m 0.7.0      \u001b[32m✔\u001b[39m \u001b[34mrecipes  \u001b[39m 0.1.13\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdials    \u001b[39m 0.0.9      \u001b[32m✔\u001b[39m \u001b[34mrsample  \u001b[39m 0.0.7 \n",
-      "\u001b[32m✔\u001b[39m \u001b[34minfer    \u001b[39m 0.5.4      \u001b[32m✔\u001b[39m \u001b[34mtune     \u001b[39m 0.1.1 \n",
-      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata\u001b[39m 0.0.2      \u001b[32m✔\u001b[39m \u001b[34mworkflows\u001b[39m 0.2.0 \n",
-      "\u001b[32m✔\u001b[39m \u001b[34mparsnip  \u001b[39m 0.1.3      \u001b[32m✔\u001b[39m \u001b[34myardstick\u001b[39m 0.0.7 \n",
-      "\n",
-      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Done to remove warning messages from the proposal and improve readability\n",
     "options(warn=-1) \n",
@@ -70,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -403,22 +369,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in new_action_recipe(recipe, blueprint): argument \"recipe\" is missing, with no default\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in new_action_recipe(recipe, blueprint): argument \"recipe\" is missing, with no default\nTraceback:\n",
-      "1. add_recipe(pulsar_recipe) %>% add_model(knn_spec) %>% tune_grid(resamples = pulsar_training, \n .     grid = 10) %>% collect_metrics() %>% filter(.metric == \"accuracy\") %>% \n .     summarize(mx = max(mean))",
-      "2. eval(lhs, parent, parent)",
-      "3. eval(lhs, parent, parent)",
-      "4. add_recipe(pulsar_recipe)",
-      "5. new_action_recipe(recipe, blueprint)",
-      "6. is_recipe(recipe)"
-     ]
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 8 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>size</th><th scope=col>model_string</th><th scope=col>accuracy</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>Class ~ Excess.kurtosis.of.the.integrated.profile                                                        </td><td>0.9772051</td></tr>\n",
+       "\t<tr><td>2</td><td>Class ~ Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve                               </td><td>0.9797378</td></tr>\n",
+       "\t<tr><td>3</td><td>Class ~ Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve+Mean.of.the.integrated.profile</td><td>0.9797380</td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>6</td><td>Class ~ Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve+Mean.of.the.integrated.profile+Standard.deviation.of.the.integrated.profile+Standard.deviation.of.the.DM.SNR.curve+Skewness.of.the.integrated.profile                                                                 </td><td>0.9795145</td></tr>\n",
+       "\t<tr><td>7</td><td>Class ~ Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve+Mean.of.the.integrated.profile+Standard.deviation.of.the.integrated.profile+Standard.deviation.of.the.DM.SNR.curve+Skewness.of.the.integrated.profile+Skewness.of.the.DM.SNR.curve                                    </td><td>0.9792165</td></tr>\n",
+       "\t<tr><td>8</td><td>Class ~ Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve+Mean.of.the.integrated.profile+Standard.deviation.of.the.integrated.profile+Standard.deviation.of.the.DM.SNR.curve+Skewness.of.the.integrated.profile+Skewness.of.the.DM.SNR.curve+Excess.kurtosis.of.the.DM.SNR.curve</td><td>0.9789186</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 8 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " size & model\\_string & accuracy\\\\\n",
+       " <int> & <chr> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 1 & Class \\textasciitilde{} Excess.kurtosis.of.the.integrated.profile                                                         & 0.9772051\\\\\n",
+       "\t 2 & Class \\textasciitilde{} Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve                                & 0.9797378\\\\\n",
+       "\t 3 & Class \\textasciitilde{} Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve+Mean.of.the.integrated.profile & 0.9797380\\\\\n",
+       "\t ⋮ & ⋮ & ⋮\\\\\n",
+       "\t 6 & Class \\textasciitilde{} Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve+Mean.of.the.integrated.profile+Standard.deviation.of.the.integrated.profile+Standard.deviation.of.the.DM.SNR.curve+Skewness.of.the.integrated.profile                                                                  & 0.9795145\\\\\n",
+       "\t 7 & Class \\textasciitilde{} Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve+Mean.of.the.integrated.profile+Standard.deviation.of.the.integrated.profile+Standard.deviation.of.the.DM.SNR.curve+Skewness.of.the.integrated.profile+Skewness.of.the.DM.SNR.curve                                     & 0.9792165\\\\\n",
+       "\t 8 & Class \\textasciitilde{} Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve+Mean.of.the.integrated.profile+Standard.deviation.of.the.integrated.profile+Standard.deviation.of.the.DM.SNR.curve+Skewness.of.the.integrated.profile+Skewness.of.the.DM.SNR.curve+Excess.kurtosis.of.the.DM.SNR.curve & 0.9789186\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 8 × 3\n",
+       "\n",
+       "| size &lt;int&gt; | model_string &lt;chr&gt; | accuracy &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| 1 | Class ~ Excess.kurtosis.of.the.integrated.profile                                                         | 0.9772051 |\n",
+       "| 2 | Class ~ Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve                                | 0.9797378 |\n",
+       "| 3 | Class ~ Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve+Mean.of.the.integrated.profile | 0.9797380 |\n",
+       "| ⋮ | ⋮ | ⋮ |\n",
+       "| 6 | Class ~ Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve+Mean.of.the.integrated.profile+Standard.deviation.of.the.integrated.profile+Standard.deviation.of.the.DM.SNR.curve+Skewness.of.the.integrated.profile                                                                  | 0.9795145 |\n",
+       "| 7 | Class ~ Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve+Mean.of.the.integrated.profile+Standard.deviation.of.the.integrated.profile+Standard.deviation.of.the.DM.SNR.curve+Skewness.of.the.integrated.profile+Skewness.of.the.DM.SNR.curve                                     | 0.9792165 |\n",
+       "| 8 | Class ~ Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve+Mean.of.the.integrated.profile+Standard.deviation.of.the.integrated.profile+Standard.deviation.of.the.DM.SNR.curve+Skewness.of.the.integrated.profile+Skewness.of.the.DM.SNR.curve+Excess.kurtosis.of.the.DM.SNR.curve | 0.9789186 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  size\n",
+       "1 1   \n",
+       "2 2   \n",
+       "3 3   \n",
+       "⋮ ⋮   \n",
+       "6 6   \n",
+       "7 7   \n",
+       "8 8   \n",
+       "  model_string                                                                                                                                                                                                                                                                                     \n",
+       "1 Class ~ Excess.kurtosis.of.the.integrated.profile                                                                                                                                                                                                                                                \n",
+       "2 Class ~ Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve                                                                                                                                                                                                                       \n",
+       "3 Class ~ Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve+Mean.of.the.integrated.profile                                                                                                                                                                                        \n",
+       "⋮ ⋮                                                                                                                                                                                                                                                                                                \n",
+       "6 Class ~ Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve+Mean.of.the.integrated.profile+Standard.deviation.of.the.integrated.profile+Standard.deviation.of.the.DM.SNR.curve+Skewness.of.the.integrated.profile                                                                 \n",
+       "7 Class ~ Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve+Mean.of.the.integrated.profile+Standard.deviation.of.the.integrated.profile+Standard.deviation.of.the.DM.SNR.curve+Skewness.of.the.integrated.profile+Skewness.of.the.DM.SNR.curve                                    \n",
+       "8 Class ~ Excess.kurtosis.of.the.integrated.profile+Mean.of.the.DM.SNR.curve+Mean.of.the.integrated.profile+Standard.deviation.of.the.integrated.profile+Standard.deviation.of.the.DM.SNR.curve+Skewness.of.the.integrated.profile+Skewness.of.the.DM.SNR.curve+Excess.kurtosis.of.the.DM.SNR.curve\n",
+       "  accuracy \n",
+       "1 0.9772051\n",
+       "2 0.9797378\n",
+       "3 0.9797380\n",
+       "⋮ ⋮        \n",
+       "6 0.9795145\n",
+       "7 0.9792165\n",
+       "8 0.9789186"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -445,13 +477,13 @@
     "        model_string <- paste(\"Class\", \"~\", paste(preds_new, collapse=\"+\"))\n",
     "        \n",
     "        pulsar_recipe <- recipe(as.formula(model_string), data = pulsar_training) %>%\n",
-    "            step_center(all_predictors()) %>%\n",
-    "            step_scale(all_predictors())\n",
+    "            step_scale(all_predictors()) %>%\n",
+    "            step_center(all_predictors())\n",
     "        \n",
-    "        acc <- workflow()\n",
+    "        acc <- workflow() %>%\n",
     "                        add_recipe(pulsar_recipe) %>%\n",
     "                        add_model(knn_spec) %>%\n",
-    "                        tune_grid(resamples = pulsar_training, grid = 10) %>%\n",
+    "                        tune_grid(resamples = pulsar_vfold, grid = 10) %>%\n",
     "                        collect_metrics() %>%\n",
     "                        filter(.metric == \"accuracy\") %>%\n",
     "                        summarize(mx = max(mean))\n",
