Grammar&typos checked, reference section added

--- a/Group_Project_Report.ipynb
+++ b/Group_Project_Report.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Total Word Count: 621*\n",
+    "*Total Word Count: 467*\n",
     "\n",
     "Pulsars are a rare type of neutron star that rotates while emitting electromagnetic radiation. When directed at the earth, these  emissions can be picked up by radio telescopes, producing radio waves of recognizable frequencies.\n",
     "Unfortunately, however, these frequencies are difficult to separate from terrestrial radio interference, making it difficult for astronomers to detect veritable pulsars. <br>\n",
@@ -23,7 +23,7 @@
     "To investigate this phenomenon statistically, our group posed the question: **\"How accurate is KNN classification at differentiating pulsar emissions from interference?\"** using a K-nearest neighbors (KNN) algorithm to differentiate pulsar from terrestrial emissions. <br>\n",
     "\n",
     "This was done using the *HTRU2 Dataset* collected by Dr. Robert Lyon. <br>\n",
-    "This dataframe has nine columns, including eight quantitative columns and one class column. The column names are shown below (Machine Learning Repository, n.d.): <br>\n",
+    "This data frame has nine columns, including eight quantitative columns and one class column. The column names are shown below (Machine Learning Repository, n.d.): <br>\n",
     "\n",
     "<ol>\n",
     "  <li>Mean of the integrated profile</li>\n",
@@ -54,9 +54,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.2     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.0.3     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.2\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.0\n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 0.1.1 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mbroom    \u001b[39m 0.7.0      \u001b[32m✔\u001b[39m \u001b[34mrecipes  \u001b[39m 0.1.13\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdials    \u001b[39m 0.0.9      \u001b[32m✔\u001b[39m \u001b[34mrsample  \u001b[39m 0.0.7 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34minfer    \u001b[39m 0.5.4      \u001b[32m✔\u001b[39m \u001b[34mtune     \u001b[39m 0.1.1 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata\u001b[39m 0.0.2      \u001b[32m✔\u001b[39m \u001b[34mworkflows\u001b[39m 0.2.0 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mparsnip  \u001b[39m 0.1.3      \u001b[32m✔\u001b[39m \u001b[34myardstick\u001b[39m 0.0.7 \n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#Done to remove warning messages from the proposal and improve readability\n",
     "options(warn=-1)\n",
@@ -75,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although this dataset is already **tidy**, we perform 3 wrangling improvements:\n",
+    "Although this dataset is already **tidy**,  three wrangling improvements are made:\n",
     "<ol>\n",
     "  <li>Spaces are removed from column names </li>\n",
     "  <li>Class values (0 and 1) are replaced by \"<b>Pulsar Star</b>\" and \"<b>Interference</b>\" (as defined by metadata) </li>\n",
@@ -211,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,12 +260,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our data is then  split into training (75%) and testing (25%) datasets using the *initial_split()* function"
+    "Then, split the data into training (75%) and testing (25%) datasets using the *initial_split()* function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before diving into classification, we need to first perform some preliminary data analysis to determine the **class frequencies**, **mean predictor values**, and the **number of rows of missing data**"
+    "Before diving into classification, we need to first perform some preliminary data analysis to determine the **class frequencies**, **mean predictor values**, and the **number of rows of missing data.**"
    ]
   },
   {
@@ -330,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As can be seen in the table above, there is a large discrepancy between the number of **interference** values (91%) and the number of **pulsar star** values (9%). <br> As K nearest neighbors classification performs poorly under class imbalance, *upsampling* will thus be performed using the **Themis** library - duplicating pulsar star observations to increase the 'weight' they hold to affect the classification of new observations"
+    "As can be seen in the table above, there is a large discrepancy between the number of **interference** values (91%) and the number of **pulsar star** values (9%). <br> As K nearest neighbors classification performs poorly under class imbalance, *upsampling* will thus be performed using the **themis** package - duplicating pulsar star observations to increase the 'weight' they hold to affect the classification of new observations"
    ]
   },
   {
@@ -400,14 +434,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Considering the breadth in values across all variables, we'll need to *standardize* each to improve classififcation - setting the mean to 0 and standard deviation to 1 when creating our recipe"
+    "Considering the breadth in values across all variables, we'll need to *standardize* each to improve classification - setting the mean to 0 and standard deviation to 1 when creating our recipe."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Additionally, as this dataset has been checked by human annotators, there are no missing values. With that out of the way, let's begin our exploratory visualizations"
+    "Additionally, there are no missing values in this dataset as it has been checked by human annotators. With that out of the way, let's begin our exploratory visualizations."
    ]
   },
   {
@@ -600,7 +634,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Judging from this forward selection, its clear that the only 3 variables with a positive influence upon the pulsar prediction are:\n",
+    "Judging from this forward selection, its clear that the only three variables with a positive influence upon the pulsar prediction are:\n",
     "<ol>\n",
     "  <li><b>Excess Kurtosis of the Integrated Profile <\\b><\\li>\n",
     "  <li><b>Mean of the DM-SNR curve<\\b><\\li>\n",
@@ -621,6 +655,26 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>References<h3> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "R. J. Lyon, B. W. Stappers, S. Cooper, J. M. Brooke, J. D. Knowles, Fifty Years of Pulsar Candidate Selection: From simple   filters to a new principled real-time classification approach, Monthly Notices of the Royal Astronomical Society 459 (1), 1104-1123, DOI: 10.1093/mnras/stw656\n",
+    "\n",
+    "Machine Learning Repository. (n.d.). HTRU2 Data Set. N.p.: University College London. Retrieved November 4, 2021, from https://archive.ics.uci.edu/ml/datasets/HTRU2\n",
+    "\n",
+    "Eatough, R. P., Molkenthin, N., Kramer, M., Noutsos, A., Keith, M. J., Stappers, B. W., & Lyne, A. G. (2010). Selection of radio pulsar candidates using artificial neural networks. Monthly Notices of the Royal Astronomical Society, 407(4), 2443-2450.\n",
+    "\n",
+    "Sagan, C. (1994). Pale Blue Dot: A Vision of the Human Future in Space. Random House."
+   ]
   }
  ],
  "metadata": {
