Words added for forward selection & one more citation added
I got the description and steps of forward selection from the text book (6.8.3)

--- a/Group_Project_Report.ipynb
+++ b/Group_Project_Report.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Total Word Count: 467*\n",
+    "*Total Word Count: 582*\n",
     "\n",
     "Pulsars are a rare type of neutron star that rotates while emitting electromagnetic radiation. When directed at the earth, these  emissions can be picked up by radio telescopes, producing radio waves of recognizable frequencies.\n",
     "Unfortunately, however, these frequencies are difficult to separate from terrestrial radio interference, making it difficult for astronomers to detect veritable pulsars. <br>\n",
@@ -490,6 +490,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to choose the variables that make the classifier the most accurate, here we use forward selection- iteratively building up a model by adding one predictor variable at a time (Campell et al., 2021). \n",
+    "\n",
+    "This process involves the following steps (Campell et al., 2021): <br>\n",
+    "1. Start with a model having no predictors \n",
+    "2. Run the following 3 steps until you run out of predictors: \n",
+    "   a. for each unused predictor, add it to the model to form a candidate model\n",
+    "   b. tune all of the candidate models\n",
+    "   c. update the model to be the candidate model with the highest cross-validation accuracy\n",
+    "3. select the model that provides the best trade-off between accuracy and simplicity "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -667,6 +682,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Campbell, T., Lee, M., & Timbers, T. (2021). Data Science: A First Introduction. Retrieved November 28, 2021, from https://ubc-dsci.github.io/introduction-to-datascience/classification2.html#predictor-variable-selection\n",
+    "\n",
     "R. J. Lyon, B. W. Stappers, S. Cooper, J. M. Brooke, J. D. Knowles, Fifty Years of Pulsar Candidate Selection: From simple   filters to a new principled real-time classification approach, Monthly Notices of the Royal Astronomical Society 459 (1), 1104-1123, DOI: 10.1093/mnras/stw656\n",
     "\n",
     "Machine Learning Repository. (n.d.). HTRU2 Data Set. N.p.: University College London. Retrieved November 4, 2021, from https://archive.ics.uci.edu/ml/datasets/HTRU2\n",
@@ -675,6 +692,13 @@
     "\n",
     "Sagan, C. (1994). Pale Blue Dot: A Vision of the Human Future in Space. Random House."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
