Added preliminary visualization

--- a/Group_Project_Report.ipynb
+++ b/Group_Project_Report.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Total Word Count: 467*\n",
+    "*Total Word Count: 582*\n",
     "\n",
     "Pulsars are a rare type of neutron star that rotates while emitting electromagnetic radiation. When directed at the earth, these  emissions can be picked up by radio telescopes, producing radio waves of recognizable frequencies.\n",
     "Unfortunately, however, these frequencies are difficult to separate from terrestrial radio interference, making it difficult for astronomers to detect veritable pulsars. <br>\n",
@@ -457,6 +457,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to choose the variables that make the classifier the most accurate, here we use forward selection- iteratively building up a model by adding one predictor variable at a time (Campell et al., 2021). \n",
+    "\n",
+    "This process involves the following steps (Campell et al., 2021): <br>\n",
+    "1. Start with a model having no predictors \n",
+    "2. Run the following 3 steps until you run out of predictors: \n",
+    "   a. for each unused predictor, add it to the model to form a candidate model\n",
+    "   b. tune all of the candidate models\n",
+    "   c. update the model to be the candidate model with the highest cross-validation accuracy\n",
+    "3. select the model that provides the best trade-off between accuracy and simplicity "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -730,39 +745,6 @@
     }
    ],
    "source": [
-    "# options(repr.plot.width = 11, repr.plot.height = 10)\n",
-    "# pulsar_plot <- pulsar_training %>%\n",
-    "#     ggplot(aes(x = Mean.of.the.integrated.profile, y = Standard.deviation.of.the.integrated.profile\t, color = Class)) +\n",
-    "#         geom_point(alpha = 0.24) +\n",
-    "#         labs(x = \"Mean of the Integrated Profile\", y = \"Standard Deviation of the Integrated Profile\", color = \"Class Type\") +\n",
-    "#         ggtitle(\"Trends in Excess Kurtosis vs Standard Deviation of the Integrated Profile\") +\n",
-    "#         theme(text = element_text(size = 15),\n",
-    "#                       plot.title = element_text(size = 18, face=\"bold\", hjust = 0.5)) + \n",
-    "#         ylim(25, 80) +\n",
-    "#         scale_color_manual(labels = c(\"Interference Readings\", \"Pulsar Star Readings\"), \n",
-    "#                            values = c(\"maroon2\", \"grey0\"))\n",
-    "#ylim set here to 25-80, meaning some outliers are not visible\n",
-    "#3D Size\n",
-    "\n",
-    "# options(repr.plot.width = 20, repr.plot.height = 10)\n",
-    "# pulsar_plot <- pulsar_training %>%\n",
-    "#     ggplot(aes(x = Excess.kurtosis.of.the.integrated.profile, \n",
-    "#                y = Mean.of.the.integrated.profile,\n",
-    "#                color = Class)) +\n",
-    "#         geom_point(alpha = 0.5, \n",
-    "#                    aes(size = Mean.of.the.DM.SNR.curve)) +\n",
-    "#         scale_shape_manual(values=c(17, 13)) +\n",
-    "#         labs(x = \"\\nExcess.kurtosis.of.the.integrated.profile\\n\", \n",
-    "#              y = \"\\nMean.of.the.DM.SNR.curve\\n\", \n",
-    "#              color = \"Mean.of.the.integrated.profile\", \n",
-    "#              color = \"Class\") +\n",
-    "#         ggtitle(\"\\nTrends in Excess Kurtosis vs Standard Deviation of the Integrated Profile\\n\") +\n",
-    "#         theme(text = element_text(size = 22),\n",
-    "#                       plot.title = element_text(size = 25, face=\"bold\", hjust = 0.5)) +\n",
-    "#          scale_color_manual(labels = c(\"Interference Readings\", \"Pulsar Star Readings\"), \n",
-    "#                             values = c(\"maroon2\", \"grey0\"))\n",
-    "\n",
-    "#3D Colour\n",
     "options(repr.plot.width = 20, repr.plot.height = 15)\n",
     "pulsar_plot <- pulsar_training %>%\n",
     "    ggplot(aes(x = Excess.kurtosis.of.the.integrated.profile, \n",
@@ -808,6 +790,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Campbell, T., Lee, M., & Timbers, T. (2021). Data Science: A First Introduction. Retrieved November 28, 2021, from https://ubc-dsci.github.io/introduction-to-datascience/classification2.html#predictor-variable-selection\n",
+    "\n",
     "R. J. Lyon, B. W. Stappers, S. Cooper, J. M. Brooke, J. D. Knowles, Fifty Years of Pulsar Candidate Selection: From simple   filters to a new principled real-time classification approach, Monthly Notices of the Royal Astronomical Society 459 (1), 1104-1123, DOI: 10.1093/mnras/stw656\n",
     "\n",
     "Machine Learning Repository. (n.d.). HTRU2 Data Set. N.p.: University College London. Retrieved November 4, 2021, from https://archive.ics.uci.edu/ml/datasets/HTRU2\n",
