Spelling checked for the latest version

--- a/Group_Project_Report.ipynb
+++ b/Group_Project_Report.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Total Word Count: 951*\n",
+    "*Total Word Count: 811*\n",
     "\n",
     "Pulsars are a rare type of neutron star that rotates while emitting electromagnetic radiation. When directed at the earth, these  emissions can be picked up by radio telescopes, producing radio waves of recognizable frequencies.\n",
     "Unfortunately, however, these frequencies are difficult to separate from terrestrial radio interference, making it difficult for astronomers to detect veritable pulsars. <br>\n",
@@ -694,8 +694,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As our predictor domain-space spans 3 dimensions, we have instead chosen to model the 3rd dimension (**Mean of the DM SNR Curve**) using colour - with low values posessing violet, and high values posessing bluer hues. <br>\n",
-    "Then, to represent our **intereference** and **pulsar** classes, we have chosen to use point shape: representing **intereference** with crosses, and **pulsar** points using standard circles. <br>\n",
+    "As our predictor domain-space spans 3 dimensions, we have instead chosen to model the 3rd dimension (**Mean of the DM SNR Curve**) using colour - with low values possessing violet, and high values possessing bluer hues. <br>\n",
+    "Then, to represent our **interference** and **pulsar** classes, we have chosen to use point shape: representing **interference** with crosses, and **pulsar** points using standard circles. <br>\n",
     "Viewing the graph above, there is undoubtedly a relationship between **pulsar** classification and the three predictors yielded from cross validation. It seems that pulsar stars have a high **Excess Kurtosis of the Integrated Profile**, a high **Mean of the DM SNR Curve**, and a low **Mean of the Integrated Profile**. <br>\n",
     "With that out of the way, it's time to create our  K-Nearest Neighbours algorithm with the given data:"
    ]
@@ -795,7 +795,7 @@
    "source": [
     "In order to offset the class imbalance present between **pulsar** readings and the more common **interference** ones, we apply the *Themis* package to upsample our data - duplicating pulsar observations to raise their power to affect new observations. <br>\n",
     "\n",
-    "However, this will **not** be baked into our cross validation data during hyperparameter selection. If we were to prep and bake oversampled training data and subsequently perform cross validation, we would return the highest-accuracy K value of 1 each time. **Why?** Because of data leakage. As duplicate points of the infrequent class are spread throughout the training set, some will inevitably enter the validation set - allowing our algorithm to test on duplicate points it has already trained on. <br>\n",
+    "However, this will **not** be baked into our cross-validation data during hyperparameter selection. If we were to prep and bake oversampled training data and subsequently perform cross-validation, we would return the highest-accuracy K value of 1 each time. **Why?** Because of data leakage. As duplicate points of the infrequent class are spread throughout the training set, some will inevitably enter the validation set - allowing our algorithm to test on duplicate points it has already trained on. <br>\n",
     "To prevent this, upsampling will only be applied after the hyperparameter selection below"
    ]
   },
@@ -1110,6 +1110,24 @@
    "metadata": {},
    "source": [
     "### "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Discussion<h3> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Please write discussion here, answering the following question:\n",
+    "1. summarize what you found\n",
+    "2. discuss whether this is what you expected to find?\n",
+    "3. discuss what impact could such findings have?\n",
+    "4. discuss what future questions could this lead to?"
    ]
   },
   {
